<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabLayout
            android:id="@+id/main_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TabLayout"/>

    </android.support.design.widget.AppBarLayout>

    <Spinner
        android:id="@+id/spinner_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_page_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>