...
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin">

                            <ImageView
                                android:id="@+id/home_image"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_alignParentStart="true"
                                android:layout_toStartOf="@id/home_score_tv"
                                android:src="@android:drawable/sym_def_app_icon"/>

...
                                android:layout_toEndOf="@id/vs_tv"
                                android:text="@string/Zero"
                                android:textSize="@dimen/text_high_size"
                                android:textColor="@color/colorGray"/>

                            <ImageView
                                android:id="@+id/away_image"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_alignParentEnd="true"
                                android:layout_toEndOf="@id/away_score_tv"
                                android:src="@android:drawable/sym_def_app_icon"/>

...
